fix: remove unnecessary scrollbar on Windows

--- a/src/components/APIStructurePreview.module.scss
+++ b/src/components/APIStructurePreview.module.scss
@@ -30,7 +30,7 @@
 .card {
   max-width: 600px;
   max-height: 50vh;
-  overflow: scroll;
+  overflow: auto;
   padding: 16px;
   position: absolute;
 
